# python-json-patch-rules

./: .gitignore  LICENSE  README.md  demo.py  environment.yml  publish.sh  requirements.txt  setup.cfg  setup.py  test.py
.github/workflows/: python-package-conda.yml
json_patch_rules/: __init__.py  __symbols__.py
tests/: test_module.py
