[metadata]
name = jsonpatchrules
version = 0.1.0
author = Bruno Agutoli
author_email = bruno.agutoli@gmail.com
description = A short description of the project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/jsonpatchrules
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests>=2
