[metadata]
name = python-json-patch-rules
version = 0.3.0
author = Bruno Agutoli
author_email = bruno.agutoli@gmail.com
description = A library to apply JSON patches with rule-based access control.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/agutoli/python-json-patch-rules
license = MIT

[options]
# Update the package_dir to the correct path where your package modules are located
package_dir =
    = .
# find_packages() should look in the correct directory specified by package_dir
packages = find:
python_requires = >=3.6
install_requires =
    pydash  # Assuming you use pydash as seen in your Python code examples
